v2.0.0.1-beta
More then one image slider with same id on same page not working - FIXED
Reviews count not showing on listing - FIXED
Category ID settings column too wide - FIXED
GD > Listings widget now used Archive item page template - FIXED
CPT custom fields settings show unused save button - FIXED

v2.0.0.0-beta
Initial beta release - INFO

v1.6.22
Comment replies should not add review structured data - FIXED
Hooks added to customize texts in location description when for empty location - ADDED
Popular post widget view all link should have url with current language - FIXED
Mobile details page tabs now close and scroll to show tab title - CHANGED
Sometime click on pinpoint doesn't opens the map infowindow - FIXED
Category top description not saved from new category form - FIXED
Fix flexslider JS conflict - FIXED
Option added in popular post widget to hide widget if no listings found - ADDED
Disable review submitting on draft/trash/pending listing - CHANGED
Don't translate GD post types/taxonomies if disabled in WPML settings - CHANGED

v1.6.21
Recent reviews doesn't work well with WPML - FIXED
Changed "Get Directions" custom field to apple maps link as it redirects better on all devices - CHANGED
Remove X theme search page titles and breadcrumbs - CHANGED
Post type conflict on add listing page  - FIXED
Listings & terms unique slug validation with WPML - CHANGED
DB Max index length variable added - ADDED
In location translation change to in %s to fix prefix location - CHANGED
Added option to change default list thumbnail image size - ADDED
Added title attribute to listing images - ADDED
CPT > Categories widget on detail page should filter post type & category if allowed - CHANGED
New hook added to filter address fields being displayed - ADDED

v1.6.20
is_featured column added in listing sample CSV file - CHANGED
Map Bubble placement problem for OpenStreetMap - FIXED
Listing slider widget image not a link - CHANGED
Hooks added to filter custom field value - CHANGED